# CSnake

./: CMakeLists.txt  main.cpp
scr/: game.cpp  game.h  rabbit.cpp  rabbit.h  segment.cpp  segment.h  snake.cpp  snake.h  timer.cpp  timer.h
